--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Установка golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: v2.12.0
 
       - name: Установка зависимостей
         run: go mod download
