--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,10 @@ jobs:
       - name: Install dependencies
         run: go mod tidy
 
-      - name: Run linters
-        run: golangci-lint run
+      - name: Линт
+        uses: golangci/golangci-lint-action@v3
+        with:
+        version: v1.64.8  # или v2.7.2 — как вам нужно
 
       - name: Run tests
         run: go test ./...
