--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,13 @@ jobs:
       - name: Install dependencies
         run: go mod tidy
 
+      - name: Установка golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.64.8
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
       - name: Линт
-        uses: golangci/golangci-lint-action@v3
-        with:
-        version: v1.64.8  # или v2.7.2 — как вам нужно
+        run: make lint
 
       - name: Run tests
         run: go test ./...
